force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>Commercial real-estate property detail backing DPEG offerings. Holds physical attributes, financing structure and performance metrics (occupancy, NOI, cap rate, IRR) surfaced in the Investor Relations app.</description>
    <label>Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>