force-app/main/default/objects/Property__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Street address of the property.</description>
    <inlineHelpText>Enter the full street address of the property.</inlineHelpText>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>