force-app/main/default/objects/Property__c/fields/Annual_NOI__c.field-meta.xml
<CustomField>
    <fullName>Annual_NOI__c</fullName>
    <description>Annual net operating income generated by the property.</description>
    <inlineHelpText>Enter the annual net operating income in USD.</inlineHelpText>
    <label>Annual NOI</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>