force-app/main/default/objects/Property__c/fields/Appraiser__c.field-meta.xml
<CustomField>
    <fullName>Appraiser__c</fullName>
    <description>Name of the firm or individual who performed the most recent appraisal.</description>
    <inlineHelpText>Enter the appraiser&apos;s name.</inlineHelpText>
    <label>Appraiser</label>
    <length>120</length>
    <type>Text</type>
</CustomField>