force-app/main/default/objects/Property__c/fields/Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cap_Rate__c</fullName>
    <description>Capitalization rate (NOI divided by value) for the property.</description>
    <inlineHelpText>Enter the cap rate as a percentage.</inlineHelpText>
    <label>Cap Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>