force-app/main/default/objects/Property__c/fields/Cash_on_Cash__c.field-meta.xml
<CustomField>
    <fullName>Cash_on_Cash__c</fullName>
    <description>Cash-on-cash return for the property as a percentage.</description>
    <inlineHelpText>Enter the cash-on-cash return as a percentage.</inlineHelpText>
    <label>Cash on Cash</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>