force-app/main/default/objects/Property__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>County in which the property is located.</description>
    <inlineHelpText>Enter the county for the property.</inlineHelpText>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>