force-app/main/default/objects/Property__c/fields/Debt_Structure__c.field-meta.xml
<CustomField>
    <fullName>Debt_Structure__c</fullName>
    <description>Summary of the debt structure on the property (loan type, terms, rate).</description>
    <inlineHelpText>Describe the debt structure (e.g., fixed-rate senior loan, terms).</inlineHelpText>
    <label>Debt Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>