force-app/main/default/objects/Property__c/fields/DPEG_Stake__c.field-meta.xml
<CustomField>
    <fullName>DPEG_Stake__c</fullName>
    <description>DPEG&apos;s (GP/sponsor) capital stake in the property.</description>
    <inlineHelpText>Enter DPEG&apos;s capital stake in USD.</inlineHelpText>
    <label>DPEG Stake</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>