force-app/main/default/objects/Property__c/fields/IRR_To_Date__c.field-meta.xml
<CustomField>
    <fullName>IRR_To_Date__c</fullName>
    <description>Internal rate of return realized to date on the property.</description>
    <inlineHelpText>Enter the IRR achieved to date as a percentage.</inlineHelpText>
    <label>IRR To Date</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>