force-app/main/default/objects/Property__c/fields/Land_Acres__c.field-meta.xml
<CustomField>
    <fullName>Land_Acres__c</fullName>
    <label>Land Acres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>