force-app/main/default/objects/Property__c/fields/Last_Appraisal_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Appraisal_Date__c</fullName>
    <description>Date of the most recent third-party appraisal of the property.</description>
    <inlineHelpText>Enter the date of the latest appraisal.</inlineHelpText>
    <label>Last Appraisal Date</label>
    <type>Date</type>
</CustomField>