force-app/main/default/objects/Property__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <description>Name of the lender providing debt financing on the property.</description>
    <inlineHelpText>Enter the lender&apos;s name.</inlineHelpText>
    <label>Lender</label>
    <length>120</length>
    <type>Text</type>
</CustomField>