force-app/main/default/objects/Property__c/fields/Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance__c</fullName>
    <description>Outstanding loan balance on the property.</description>
    <inlineHelpText>Enter the outstanding loan balance in USD.</inlineHelpText>
    <label>Loan Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>