force-app/main/default/objects/Property__c/fields/LP_Capital__c.field-meta.xml
<CustomField>
    <fullName>LP_Capital__c</fullName>
    <description>Limited-partner capital invested in the property.</description>
    <inlineHelpText>Enter the total LP capital in USD.</inlineHelpText>
    <label>LP Capital</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>