force-app/main/default/objects/Property__c/fields/Occupancy_Pct__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Pct__c</fullName>
    <description>Current physical occupancy of the property as a percentage.</description>
    <inlineHelpText>Enter occupancy as a percentage (e.g., 94.50).</inlineHelpText>
    <label>Occupancy %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>