force-app/main/default/objects/Property__c/fields/Projected_Exit__c.field-meta.xml
<CustomField>
    <fullName>Projected_Exit__c</fullName>
    <description>Projected exit/disposition timeframe for the property (e.g., a target quarter).</description>
    <inlineHelpText>Enter the projected exit period (e.g., Q3 2028).</inlineHelpText>
    <label>Projected Exit</label>
    <length>40</length>
    <type>Text</type>
</CustomField>