force-app/main/default/objects/Property__c/fields/Rentable_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Rentable_SqFt__c</fullName>
    <description>Total rentable square footage of the property.</description>
    <inlineHelpText>Enter the rentable square footage.</inlineHelpText>
    <label>Rentable SqFt</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>