force-app/main/default/objects/Property__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status of the property within the DPEG portfolio.</description>
    <inlineHelpText>Active = currently held; Disposed = sold/exited.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Disposed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>