force-app/main/default/objects/Property__c/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>Submarket__c</fullName>
    <description>Real-estate submarket the property belongs to.</description>
    <inlineHelpText>Enter the market/submarket designation for this property.</inlineHelpText>
    <label>Submarket</label>
    <length>80</length>
    <type>Text</type>
</CustomField>