force-app/main/default/objects/Property__c/fields/Target_IRR__c.field-meta.xml
<CustomField>
    <fullName>Target_IRR__c</fullName>
    <description>Underwritten target internal rate of return for the property.</description>
    <inlineHelpText>Enter the target IRR as a percentage.</inlineHelpText>
    <label>Target IRR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>