force-app/main/default/objects/Property__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Number of leasable units or tenant spaces in the property.</description>
    <inlineHelpText>Enter the number of units or tenant spaces.</inlineHelpText>
    <label>Units</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>