force-app/main/default/objects/Property__c/fields/Valuation__c.field-meta.xml
<CustomField>
    <fullName>Valuation__c</fullName>
    <description>Current market valuation of the property.</description>
    <inlineHelpText>Enter the current property valuation in USD.</inlineHelpText>
    <label>Valuation</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>