force-app/main/default/objects/Property__c/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <description>Year the property was originally constructed.</description>
    <inlineHelpText>Enter the four-digit year the property was built.</inlineHelpText>
    <label>Year Built</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>