force-app/main/default/objects/Property__c/fields/Year_Renovated__c.field-meta.xml
<CustomField>
    <fullName>Year_Renovated__c</fullName>
    <description>Most recent year the property underwent major renovation.</description>
    <inlineHelpText>Enter the four-digit year of the last major renovation.</inlineHelpText>
    <label>Year Renovated</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>