force-app/main/default/objects/Property__c/fields/Zoning__c.field-meta.xml
<CustomField>
    <fullName>Zoning__c</fullName>
    <description>Zoning classification applicable to the property.</description>
    <inlineHelpText>Enter the zoning designation for this property.</inlineHelpText>
    <label>Zoning</label>
    <length>80</length>
    <type>Text</type>
</CustomField>