force-app/main/default/objects/Property__c/listViews/All_Properties.listView-meta.xml
<ListView>
    <fullName>All_Properties</fullName>
    <columns>NAME</columns>
    <columns>Acquisition_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Land_Acres__c</columns>
    <columns>Units__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Properties</label>
</ListView>